--- a/Tobi/css.css
+++ b/Tobi/css.css
@@ -24,6 +24,17 @@ body {
 	height:100px;
 }
 
+#produkt {
+	position:relative;
+	display:block;
+	float:left;
+	padding:5px;
+	background-color:#02C0FD;
+	width: 290px;
+	height: 600px;
+}
+
+
 #hersteller {
 	position:relative;
 	float:left;
