--- a/Tobi/responsive.css
+++ b/Tobi/responsive.css
@@ -12,7 +12,7 @@ body {
 	color: #222;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 	font-weight: 300;
-	font-size: 15px;
+	font-size: 12px;
 	margin:20px;
 }
 
@@ -25,14 +25,36 @@ a:hover{
 	text-decoration: underline;
 }
 
-h3{
+h1{
+	font-size:15px;
 	padding:0;
 	margin:0;
-	margin-top: 15px;
-	padding-bottom:10px;
+	margin: 0px;
+	padding:0px;
+	color:#333;
+	text-transform: uppercase;
+	/*border-bottom: solid 1px #CCC;*/
+}
+
+h2{
+	font-size:12px;
+	padding:0;
+	margin:0;
+	padding:0px;
 	color:#666;
 	text-transform: uppercase;
 	border-bottom: solid 1px #CCC;
+}
+
+h3{
+	font-size:12px;
+	padding:0;
+	margin:0;
+	margin: 15px 0px 10px 0px;
+	padding-bottom:5px;
+	color:#999;
+	text-transform: uppercase;
+	border-bottom: dotted 1px #CCC;
 }
 
 nav {
