--- a/Tobi/GeräteListe/responsive.css
+++ b/Tobi/GeräteListe/responsive.css
@@ -88,7 +88,7 @@ nav {
 	height:100px;
 }
 
-#hersteller {
+#geraete {
 	position:relative;
 	float:left;
 	padding-left:5px;
@@ -146,7 +146,7 @@ nav {
 	height:100px;
 }
 
-#hersteller {
+#geraete {
 	position:relative;
 	float:left;
 	padding:5px;
