--- a/Tobi/GeräteListe/responsive.css
+++ b/Tobi/GeräteListe/responsive.css
@@ -168,5 +168,18 @@ nav {
 	margin:5px;
 }
  
+p { 
+margin:0px 0px 5px 0px;
+padding:0px;
+}
 
+ul {
+	margin:5px;
+	padding: 0px 0px 0px 10px;
+	list-style-type:square;
+}
+
+li {
+margin:0px;
+padding: 0px;
 }
