--- a/Tobi/KundeRecyclinghof PLZ fehlt/responsive.css
+++ b/Tobi/KundeRecyclinghof PLZ fehlt/responsive.css
@@ -88,7 +88,7 @@ nav {
 	height:100px;
 }
 
-#geraete {
+#links {
 	position:relative;
 	float:left;
 	padding-left:5px;
@@ -100,7 +100,7 @@ nav {
 	margin-bottom: 10px;
 }
 
-#recyclinghof {
+#rechts {
 	position:relative;
 	float:left;
 	padding-left:5px;
@@ -146,7 +146,7 @@ nav {
 	height:100px;
 }
 
-#geraete {
+#links {
 	position:relative;
 	float:left;
 	padding:5px;
@@ -157,7 +157,7 @@ nav {
 	margin:5px;
 }
 
-#recyclinghof {
+#rechts {
 	position:relative;
 	float:left;
 	padding:5px;
